apps/back-office/src/app/_components/OverviewMobile.module.css
.list {
  display: grid;
  margin-block-end: var(--ams-space-l);
  row-gap: var(--ams-space-l);
}

.card {
  background-color: var(--ams-color-background);
  padding-block: var(--ams-space-m);
  padding-inline: var(--ams-space-m);
}

.descriptionList {
  grid-template-columns: auto 1fr;
  row-gap: var(--ams-space-m);
}

.descriptionList dd {
  padding-inline-start: 0;
}

@media screen and (min-width: 72.5rem) {
  .list {
    display: none;
  }
}

